<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.TestFragment">

    <EditText
        android:id="@+id/edtTxt_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Testing Fragments UI"
        android:text="fragmentLabel_test" />

    <EditText
        android:id="@+id/edtTxt_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Testing Fragments UI"
        android:text="fragmentLabel" />


    <EditText
        android:id="@+id/edtTxt_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Testing Fragments UI"
        android:text="fragmentLabel" />

    <EditText
        android:id="@+id/edtTxt_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Testing Fragments UI"
        android:text="fragmentLabel" />

    <Button
        android:id="@+id/btn_showToast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Show Toast" />


</LinearLayout>