<resources>
    <string name="app_name">Test Driven Development</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="toast">Toast</string>
</resources>
